<resources>
    <string name="app_name">NutriSoft</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Custom -->
    <string name="login_btn_iniciar">"Inicio de Sesión"</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">nutrisoft</string>
    <string name="nav_header_subtitle">ITSX</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="nav_citas">Citas</string>
    <string name="nav_dieta">Dieta</string>
    <string name="nav_mensajes">Mensajes</string>
    <string name="nav_progreso">Progreso</string>
    <string name="nav_perfil">Perfil</string>
    <string name="nav_comida">Comida</string>
    <string name="nav_salir">Cerrar Sesión</string>
    <string name="lbl_enviar">Enviar</string>
    <string name="title_activity_citas">Citas</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="Dias">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
        <item>Domingo</item>
    </string-array>
    <string-array name="comidas">
        <item>Desayuno</item>
        <item>Primera Colación</item>
        <item>Comida</item>
        <item>Segunda Colación</item>
        <item>Cena</item>
    </string-array>
    <string name="title_activity_navegacion">navegacion</string>

</resources>
