<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_citas"
            android:icon="@drawable/ic_menu_citas"
            android:title="@string/nav_citas" />
        <item
            android:id="@+id/nav_dieta"
            android:icon="@drawable/ic_menu_dieta"
            android:title="@string/nav_dieta" />
        <item
            android:id="@+id/nav_mensajes"
            android:icon="@drawable/ic_cita_mensaje"
            android:title="@string/nav_mensajes" />
        <item
            android:id="@+id/nav_progreso"
            android:icon="@drawable/ic_menu_progreso"
            android:title="@string/nav_progreso" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/nav_perfil" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_menu_salir"
            android:title="@string/nav_salir" />
    </group>
</menu>
